--- a/reports/main.tex
+++ b/reports/main.tex
@@ -15,6 +15,7 @@
 \usepackage{parskip}
 \usepackage{xcolor}
 \usepackage{listings}
+\usepackage{tocloft}
 
 % Define your custom colors
 \definecolor{bashblue}{rgb}{0.2,0.4,0.8}
@@ -69,38 +70,29 @@
 
 \setcounter{secnumdepth}{4} % Heading
 \titlespacing*{\section}{0pt}{0pt}{12pt} % Heading 1
-\titleformat*{\section}{\fontsize{16pt}{0pt}\selectfont \bfseries}
+\titleformat*{\section}{\fontsize{16pt}{0pt}\selectfont\bfseries}
 
 \titlespacing*{\subsection}{0pt}{10pt}{0pt} % Heading 2
-\titleformat*{\subsection}{\fontsize{14pt}{0pt}\selectfont \bfseries }
+\titleformat*{\subsection}{\fontsize{14pt}{0pt}\selectfont\bfseries}
 
 \titlespacing*{\subsubsection}{0pt}{10pt}{0pt} % Heading 3
-\titleformat*{\subsubsection}{\fontsize{13pt}{0pt}\selectfont \bfseries \itshape}
+\titleformat*{\subsubsection}{\fontsize{13pt}{0pt}\selectfont\bfseries\itshape}
 
 \titlespacing*{\paragraph}{0pt}{10pt}{0pt} % Heading 4
-\titleformat*{\paragraph}{\fontsize{13pt}{0pt}\selectfont \itshape}
+\titleformat*{\paragraph}{\fontsize{13pt}{0pt}\selectfont\itshape}
 
 
-\renewcommand{\figurename}{\fontsize{12pt}{0pt}\selectfont \bfseries Hình}
-% \renewcommand{\thefigure}{\arabic{figure}}
-
-\renewcommand{\tablename}{\fontsize{12pt}{0pt}\selectfont \bfseries Bảng}
+\renewcommand{\tablename}{\fontsize{12pt}{0pt}\selectfont Bảng}
 \renewcommand{\thetable}{\arabic{table}}
 
-\renewcommand{\lstlistingname}{\fontsize{12pt}{0pt}\selectfont \bfseries Đoạn mã}
-% \renewcommand{\thetable}{\arabic{table}}
+
 
 \usepackage{lipsum}
-\renewcommand{\contentsname}{MỤC LỤC}
-\renewcommand{\listfigurename}{DANH MỤC HÌNH}
 \renewcommand{\refname}{TÀI LIỆU THAM KHẢO}
 
 \usepackage[unicode]{hyperref}
-\usepackage{colortbl}
-\definecolor{LightCyan}{rgb}{0.88,1,1}
 \usepackage{forloop}
-\newcounter{loopcntr}
-\newcommand{\rpt}[2][1]{\forloop{loopcntr}{0}{\value{loopcntr}<#1}{#2}}
+
 
 
 \newcommand{\setsection}[1]{\section*{#1}\addcontentsline{toc}{section}{#1}}
@@ -109,29 +101,65 @@
 \newcommand{\myref}[1]{\textbf{\hyperref[#1]{Hình~\ref*{#1}}}}
 
 
+
+\newcommand{\figmini}[4][.93]{%
+    \begin{minipage}{#1\linewidth}
+        \captionsetup{type=figure, width=#1\linewidth}
+        \includegraphics[width=\linewidth]{#2}
+        \caption{\centering #4}
+        \label{#3}
+    \end{minipage}%
+}
+
+\newcommand{\figminiskip}[4][.93]{%
+    \begin{minipage}{#1\linewidth}
+        \captionsetup{type=figure, skip=-15pt, width=#1\linewidth}
+        \includegraphics[width=\linewidth]{#2}
+        \caption{\centering #4}
+        \label{#3}
+    \end{minipage}%
+}
+
+% =========================== START DOCUMENT ==================================
 \begin{document}
 
 \input{corverPage}
 
 % Generate menu
 \addtocontents{toc}{\protect\thispagestyle{empty}}
+\renewcommand{\contentsname}{MỤC LỤC}
 \tableofcontents
 \thispagestyle{empty}
 \cleardoublepage
 
 \pagenumbering{roman}
-% \section*{DANH MỤC HÌNH}
-% \addcontentsline{toc}{section}{\numberline{}DANH MỤC HÌNH}
-% \cleardoublepage
 
-% Automatically generate list figures
-\phantomsection
-{
-  \let\oldnumberline\numberline
-  \renewcommand{\numberline}{\figurename~\oldnumberline}
-  \listoffigures
-}
+% ======= SET UP LIST OF FIGURES =======
+\setlength{\cftfigindent}{0pt}
+\setlength{\cftfignumwidth}{4em}
+\renewcommand{\figurename}{\fontsize{12pt}{0pt}\selectfont Hình}
+\renewcommand{\cftfigpresnum}{\figurename~}
+\renewcommand{\listfigurename}{DANH MỤC HÌNH}
 \addcontentsline{toc}{section}{\numberline{}DANH MỤC HÌNH}
+\phantomsection
+\listoffigures
+\cleardoublepage
+
+% ======= SET UP LIST OF CODES =======
+\renewcommand{\lstlistingname}{\fontsize{12pt}{0pt}\selectfont Code}
+% \renewcommand{\cft}
+\renewcommand{\lstlistlistingname}{DANH MỤC CODE}
+\addcontentsline{toc}{section}{\numberline{}DANH MỤC CODE}
+
+
+\makeatother
+
+\lstlistoflistings
+\cleardoublepage
+
+% ======= SET UP LIST OF TABLES =======
+
+\listoftables
 \cleardoublepage
 
 
@@ -143,11 +171,8 @@ các dịch vụ mạng phục vụ cho công việc của công ty như sau:
 \setcounter{section}{0}
 \setcounter{subsection}{1}
 \setcounter{figure}{0}
-\begin{minipage}{.93\linewidth}
-  \captionsetup{type=figure}
-  \includegraphics[width=\linewidth]{./imgs/Hinh-1.png}
-  \caption{\bfseries Sơ đồ hệ thống mạng của công ty Tam Quốc}
-\end{minipage}
+\figmini{./imgs/Hinh-1.png}{fig:main}{Sơ đồ hệ thống mạng của công ty Tam Quốc}
+
 
 % \renewcommand{\arraystretch}{1.5}
 \setcounter{subsection}{0}
