--- a/reports/config/code.sty
+++ b/reports/config/code.sty
@@ -22,13 +22,16 @@
   stringstyle=\color{bashred},
   numberstyle=\color{bashgray},
   rulecolor=\color{black},
-  breakatwhitespace=false,
-  % breaklines=true,
-  % captionpos=b,
-  % keepspaces=true,
-  % showspaces=false,
-  % showstringspaces=false,
-  % showtabs=false,
+  breakindent=1em,
+  escapeinside={(*@}{@*)},
+  alsoletter={()[].=/}
+  keepspaces=true,
+  breaklines=true,
+  captionpos=b,
+  keepspaces=true,
+  showspaces=false,
+  showstringspaces=false,
+  showtabs=false,
   tabsize=2,
   gobble=2,
   numbers=left,
