--- a/reports/config/code.sty
+++ b/reports/config/code.sty
@@ -24,7 +24,7 @@
   rulecolor=\color{black},
   breakindent=1em,
   escapeinside={(*@}{@*)},
-  alsoletter={()[].=/}
+  alsoletter={()[].=/-}
   keepspaces=true,
   breaklines=true,
   captionpos=b,
